--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,7 @@ SQLAlchemy==1.3.0
 testing.common.database==2.0.3
 testing.postgresql==1.3.0
 text-unidecode==1.2
+timeago==1.0.14
 tornado==5.1.1
 traitlets==4.3.2
 uritemplate==3.0.0
