--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Flask-Compress==1.4.0
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+flask_cors==3.0.9
 flower==0.9.2
 FullContact.py==0.0.6
 funcsigs==1.0.2
