translation and css fix

--- a/docker.env
+++ b/docker.env
@@ -35,3 +35,5 @@ CHROME_EXTENSION_URL=https://chrome.google.com/webstore/detail/origin-browser-ex
 FIREFOX_EXTENSION_URL=https://addons.mozilla.org/en-US/firefox/addon/origin-browser-extension/
 
 DSHOP_DEMO_FORM=https://docs.google.com/forms/d/e/1FAIpQLSf04ewVRNyyyPRHKXOioNAHlEe-ayN9cdLPzEmqmNKs8PtbgQ/viewform
+
+STAKE_URL = "https://ousd.com/stake"
