--- a/sample.env
+++ b/sample.env
@@ -30,3 +30,5 @@ YOUTUBE_CLIENT_ID = clientid_from_googleconsole
 YOUTUBE_CLIENT_SECRET = client_secret_from_google_console
 YOUTUBE_PROJECT_ID = project_id_from_google_console
 YOUTUBE_REDIRECT_URL = http://localhost:5000/youtube/oauth2callback
+
+STAKE_URL = "https://ousd.com/stake"
