change endpoint URL

--- a/docker.env
+++ b/docker.env
@@ -38,4 +38,4 @@ DSHOP_DEMO_FORM=https://docs.google.com/forms/d/e/1FAIpQLSf04ewVRNyyyPRHKXOioNAH
 
 STAKE_URL = "https://ousd.com/stake"
 
-STAKING_STATS_URL="http://host.docker.internal:3000/api/stats"
+STAKING_STATS_URL="http://host.docker.internal:8000/api/v1/staking_stats"
