Update OGN dashboard (#565)
* Update OGN dashboard

* change endpoint URL

--- a/docker.env
+++ b/docker.env
@@ -37,3 +37,5 @@ FIREFOX_EXTENSION_URL=https://addons.mozilla.org/en-US/firefox/addon/origin-brow
 DSHOP_DEMO_FORM=https://docs.google.com/forms/d/e/1FAIpQLSf04ewVRNyyyPRHKXOioNAHlEe-ayN9cdLPzEmqmNKs8PtbgQ/viewform
 
 STAKE_URL = "https://ousd.com/stake"
+
+STAKING_STATS_URL="http://host.docker.internal:8000/api/v1/staking_stats"
