--- a/docker.env
+++ b/docker.env
@@ -6,11 +6,9 @@ SENDGRID_API_KEY=
 RECAPTCHA_SITE_KEY = "6Lfm2lUUAAAAAGxPhP1ZIeFM_F2Du0HSjIP2CEPH"
 RECAPTCHA_SECRET_KEY = "6Lfm2lUUAAAAAMmJg_mXa_x-x1DDKSCLDBo8hqdM"
 
-"""
-You probably won't want to modify anything below this line if you are just
-wanting to get a development environment running. Everything is preconfigured
-to work in the docker-compose environment.
-"""
+# You probably won't want to modify anything below this line if you are just
+# wanting to get a development environment running. Everything is preconfigured
+# to work in the docker-compose environment.
 
 # Flask settings
 DEBUG=True
