--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -10,4 +10,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --file=setup.py --severity-threshold=high
+          args: --file=setup.py
