move ethplorer to https since http doesn't work anymore

--- a/sample.env
+++ b/sample.env
@@ -32,3 +32,4 @@ YOUTUBE_PROJECT_ID = project_id_from_google_console
 YOUTUBE_REDIRECT_URL = http://localhost:5000/youtube/oauth2callback
 
 LAUNCHPAD_API = http://localhost:3000/api
+ETHPLORER_KEY=*********
