--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-aiohttp==3.7.4.post0
+1inch.py==2.0.3
+aiohttp==3.9.0
+aiosignal==1.3.1
 alembic==1.5.8
 amqp==5.0.6
-async-timeout==3.0.1
-attrs==20.3.0
+async-timeout==4.0.3
+attrs==23.1.0
 Babel==2.9.1
 backoff==1.10.0
 beautifulsoup4==4.9.3
 billiard==3.6.4.0
+bitarray==2.8.3
 blinker==1.4
 Brotli==1.0.9
 cachetools==4.2.2
@@ -14,47 +17,64 @@ celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
+charset-normalizer==3.3.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
+click==7.1.2
 cryptography==3.4.7
+cytoolz==0.12.2
+eth-abi==4.2.1
+eth-account==0.10.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-typing==3.5.2
+eth-utils==2.3.1
 factory-boy==3.2.0
 Faker==8.1.1
-Flask==1.1.2
 Flask-Babel==2.0.0
 Flask-Compress==1.9.0
 Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
+Flask==1.1.2
+frozenlist==1.4.0
 FullContact.py==0.0.6
 geoip2==4.1.0
 google-api-core==1.26.3
 google-api-python-client==2.3.0
-google-auth==1.30.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.4
+google-auth==1.30.0
 googleapis-common-protos==1.53.0
 greenlet==1.0.0
+hexbytes==0.3.1
 httplib2==0.19.1
-idna==2.10
+idna==3.6
 itsdangerous==2.0.0rc2
 Jinja2==2.11.3
+jsonschema-specifications==2023.11.1
+jsonschema==4.20.0
 kombu==5.1.0b1
+lru-dict==1.2.0
 Mako==1.1.4
 MarkupSafe==2.0.0rc2
 maxminddb==2.0.3
-multidict==5.1.0
+multidict==6.0.4
 nameparser==1.0.6
 oauthlib==3.1.0
 packaging==20.9
+parsimonious==0.9.0
 prompt-toolkit==3.0.18
-protobuf==4.0.0rc2
+protobuf==4.25.1
 psycopg2==2.8.6
-pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyasn1==0.4.8
 pycparser==2.20
+pycryptodome==3.19.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -63,12 +83,17 @@ python-editor==1.0.4
 python-http-client==3.3.2
 pytz==2021.1
 pyuca==1.2
+pyunormalize==15.1.0
 PyYAML==5.4.1
 ratelimit==2.2.1
 raven==6.10.0
 redis==3.5.3
-requests==2.25.1
+referencing==0.31.0
+regex==2023.10.3
 requests-oauthlib==1.3.0
+requests==2.31.0
+rlp==3.0.0
+rpds-py==0.13.1
 rsa==4.7.2
 sendgrid==6.6.0
 six==1.15.0
@@ -77,11 +102,15 @@ SQLAlchemy==1.4.11
 starkbank-ecdsa==1.1.0
 text-unidecode==1.3
 timeago==1.0.15
+toolz==0.12.0
 typing-extensions==3.7.4.3
+typing_extensions==4.8.0
 uritemplate==3.0.1
-urllib3==1.26.4
+urllib3==2.1.0
 vine==5.0.0
 wcwidth==0.2.5
+web3==6.11.3
+websockets==12.0
 Werkzeug==2.0.0rc4
-yarl==1.6.3
+yarl==1.9.3
 .[deploy]
