remove conflicting pip version

--- a/requirements.txt
+++ b/requirements.txt
@@ -105,7 +105,7 @@ timeago==1.0.15
 toolz==0.12.0
 typing_extensions==4.8.0
 uritemplate==3.0.1
-urllib3==2.1.0
+urllib3
 vine==5.0.0
 wcwidth==0.2.5
 web3==6.11.3
