--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,7 @@ redis==3.5.3
 referencing==0.31.0
 regex==2023.10.3
 requests-oauthlib==1.3.0
-requests
+requests==2.28.1
 rlp==3.0.0
 rpds-py==0.13.1
 rsa==4.7.2
