update requests version

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-charset-normalizer==3.3.2
+charset-normalizer
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
