--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ MarkupSafe==2.0.0rc2
 maxminddb==2.0.3
 multidict==6.0.4
 nameparser==1.0.6
+newrelic==9.2.0
 oauthlib==3.1.0
 packaging==20.9
 parsimonious==0.9.0
