--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ google-auth-oauthlib==0.4.4
 google-auth==1.30.0
 googleapis-common-protos==1.53.0
 greenlet==1.0.0
+gunicorn
 hexbytes==0.3.1
 httplib2==0.19.1
 idna==3.6
